--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col bg-dark text-white">
       <a class="navbar-brand">SPORTS STORE</a>
+      <app-cart-summary></app-cart-summary>
     </div>
   </div>
   <div class="row">
@@ -21,7 +22,13 @@
             {{ product.price | currency:"USD":"symbol":"2.2-2" }}
           </span>
         </h4>
-        <div class="card-text bg-white p-1" >{{product.description}}</div>
+        <div class="card-text bg-white p-1" >
+          {{product.description}}
+          <button class="btn btn-success btn-sm float-right"
+                  (click)="addProductToCart(product)">
+            Add To Cart
+          </button>
+        </div>
       </div>
 
       <div class="form-inline float-left mr-1">
